[package]
name = "canutils"
version = "0.1.2"
license = "MIT"
description = "A can-utils implementation in pure Rust"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
homepage = "https://github.com/marcelbuesing/canutils-rs"
repository = "https://github.com/marcelbuesing/canutils-rs.git"
keywords = ["can-utils", "can", "automotive", "ecu"]
documentation = "https://docs.rs/canutils"
readme = "README.md"

[badges]
travis-ci = { repository = "marcelbuesing/canutils-rs", branch = "master" }

[dependencies]
ansi_term = "0.11"
futures-preview = "0.3.0-alpha.16"
futures-util-preview = "0.3.0-alpha.16"
nom = "5.0.0-beta1"
runtime = "0.3.0-alpha.4"
structopt = "0.2"
tokio-socketcan = "0.1"

[[bin]]
name = "candumprb"
path = "src/candumprb/main.rs"

[profile.release]
opt-level = 3
debug = false
lto = true