[package]
name = "canutils"
version = "0.2.0"
license = "MIT"
description = "A can-utils implementation in pure Rust"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
homepage = "https://github.com/marcelbuesing/canutils-rs"
repository = "https://github.com/marcelbuesing/canutils-rs.git"
keywords = ["can-utils", "can", "automotive", "ecu"]
documentation = "https://docs.rs/canutils"
readme = "README.md"

[badges]
travis-ci = { repository = "marcelbuesing/canutils-rs", branch = "master" }

[dependencies]
nom = "5.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
ansi_term = "0.12"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = ["compat"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-socketcan = "0.1"

[[example]]
name = "candumprb"

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
with-serde = ["serde", "serde_derive"]