[package]
name = "canutils"
version = "1.0.0"
license = "MIT"
description = "A can-utils implementation in pure Rust"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2018"
homepage = "https://github.com/marcelbuesing/canutils-rs"
repository = "https://github.com/marcelbuesing/canutils-rs.git"
keywords = ["can-utils", "can", "automotive", "ecu"]
documentation = "https://docs.rs/canutils"
readme = "README.md"

[badges]
travis-ci = { repository = "marcelbuesing/canutils-rs", branch = "master" }

[dependencies]
nom = "5.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
ansi_term = "0.12"
anyhow = "1.0"
can-dbc = "3.0"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = ["compat"] }
futures-timer = "3.0"
pretty-hex = "0.2"
rand = "0.7"
rand_core = "0.5"
structopt = "0.3"
socketcan = "1.7"
tokio = { version = "0.2", features = ["full"] }
tokio-socketcan = "0.1"

[[bin]]
name = "candumprb"

[[bin]]
name = "cangenrb"

[[bin]]
name = "canstatsrb"

[profile.release]
opt-level = 3
debug = false
lto = true

[features]
with-serde = ["serde", "serde_derive"]